Add @teammeer.com/3dtostrip dependency and refactor components to use it

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@teammeer.com/3dtostrip": "^0.1.0",
     "@types/three": "^0.180.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
